Finished for today

--- a/MPR1/figures.tex
+++ b/MPR1/figures.tex
@@ -87,7 +87,7 @@ word_count = GPU.output_hash
 #=> { "the" => 1, "input" => 1, "string" => 1 }
 \end{lstlisting}
 \caption{Fabricated idea of how syntax might work for MapReduce tasks.}
-\label{snippet}
+\label{mp-snippet}
 \end{figure*}
 
 
