Possibly hand-in worthy

--- a/MPR1/abstract.tex
+++ b/MPR1/abstract.tex
@@ -5,7 +5,7 @@
   The project is constructing a framework that will be of use to anyone who has access to a high-performance GPU device and would benefit from an increase in throughput when processing datasets in a manner that can be suitably parallelised.
   In addition, the project hopes to avoid the disadvantages of similar parallel frameworks that require large amounts of user-intervention to tune execution. This need for task-specific configuration increase the barriers to entry of otherwise obtainable benefits.
 
-  After two semesters of progress following the path set in the project's proposal \cite{proposal}, a viable solution for co-processing purely functional algorithms on integers has been developed. The project is achieving the previous milestone goals set and is on track to enter the second phase of development over summer.
+  After two semesters of progress following the path set in the project's proposal \cite{proposal}, a viable solution for co-processing higher-order functions on integers has been developed. The project is achieving the previous milestone goals set and is on track to enter the second phase of development over summer.
 
   The implementation is being tested against the hypothesis that there exist use-cases that can be efficiently implemented on a highly parallel device whilst remaining programmer-friendly.
 This abstraction may be achieved by presenting a collection of simple functions that encapsulate all required complexities.
