--- a/MPR1/evaluation.tex
+++ b/MPR1/evaluation.tex
@@ -1,6 +1,6 @@
 \section{Evaluation}
 \subsection{Performance}
-In order to understand how the implementation performs against alternatives, both as it is being iteratively improved and prior to release. Results of various performance tests shall be provided.
+In order to understand how the implementation performs against alternatives, both as it is being iteratively improved and prior to release, results of various performance tests shall be provided.
 
 For each feature present, the framework will be compared against existing projects or language constructs that provide such functionality. When demonstrating a functional Map implementation, the time taken for a language's default Map implementation, alongside the results of my library performing on both the GPU and CPU as compute devices, shall be shown.
 
