--- a/MPR1/report.tex
+++ b/MPR1/report.tex
@@ -1,4 +1,4 @@
-\documentclass[13pt,a4paper,twocolumn] {scrartcl}   % list options between brackets
+\documentclass[12pt,a4paper,twocolumn] {scrreprt}   % list options between brackets
 \usepackage{datetime,acronym,url}              % list packages between braces
 \urlstyle{sf}
 \usepackage{DejaVuSerifCondensed}
@@ -21,9 +21,12 @@
 %\input{background.tex}
 %\input{existing_work.tex}
 \input{goals.tex}
+\input{methodology.tex}
 \input{progress.tex}
 \input{future.tex}
+\input{evaluation.tex}
 \input{workplan.tex}
+\pagebreak
 \input{figures.tex}
 
 \acrodef{CUDA}{\emph{Compute Unified Device Architecture}}
